feat(parser): emit grammar-owned structural evidence